--- a/index.html
+++ b/index.html
@@ -54,6 +54,21 @@
           </div>
         </div>
       </article>
+      <footer class="attribution">
+        Challenge by
+        <a
+          class="fw-bold text-accent"
+          href="https://www.frontendmentor.io?ref=challenge"
+          target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a
+          class="fw-bold text-accent"
+          target="_blank"
+          href="https://github.com/ThyuHtooAungOwO"
+          >PoungMont</a
+        >.
+      </footer>
     </main>
   </body>
 </html>
